--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Iván Cárdenas</title>
 </head>
 <body>
-    <h1>Iván Cárdenas</h1>
+    <div>
+        <style>
+            div {
+                position: fixed;
+                top: 50%;
+                left: 50%;
+            }
+        </style>
+        <h1>Iván Cárdenas</h1>
+    </div>
 </body>
 </html>
